--- a/SomerenLogic/SomerenLogic.csproj
+++ b/SomerenLogic/SomerenLogic.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivitieService.cs" />
     <Compile Include="RoomService.cs" />
     <Compile Include="TeacherService.cs" />
     <Compile Include="StudentService.cs" />
