--- a/SomerenDAL/SomerenDAL.csproj
+++ b/SomerenDAL/SomerenDAL.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ActivityDao.cs" />
     <Compile Include="BaseDao.cs" />
+    <Compile Include="RevenueDAO.cs" />
     <Compile Include="RoomDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentDao.cs" />
