--- a/SomerenDAL/SomerenDAL.csproj
+++ b/SomerenDAL/SomerenDAL.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ActivityDao.cs" />
     <Compile Include="BaseDao.cs" />
+    <Compile Include="DrinkDao.cs" />
     <Compile Include="SupplyDao.cs" />
     <Compile Include="VATCalculationDao.cs" />
     <Compile Include="RevenueDAO.cs" />
