--- a/SomerenDAL/SomerenDAL.csproj
+++ b/SomerenDAL/SomerenDAL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ActivityDao.cs" />
     <Compile Include="BaseDao.cs" />
     <Compile Include="DrinkDao.cs" />
+    <Compile Include="SupervisorDao.cs" />
     <Compile Include="SupplyDao.cs" />
     <Compile Include="VATCalculationDao.cs" />
     <Compile Include="RevenueDAO.cs" />
