--- a/SomerenLogic/SomerenLogic.csproj
+++ b/SomerenLogic/SomerenLogic.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ActivityService.cs" />
     <Compile Include="DrinkService.cs" />
+    <Compile Include="SupervisorService.cs" />
     <Compile Include="SupplyService.cs" />
     <Compile Include="RevenueService.cs" />
     <Compile Include="RoomService.cs" />
