--- a/SomerenModel/SomerenModel.csproj
+++ b/SomerenModel/SomerenModel.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Activity.cs" />
     <Compile Include="Drink.cs" />
+    <Compile Include="Supervisor.cs" />
     <Compile Include="Supply.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
