--- a/SomerenDAL/SomerenDAL.csproj
+++ b/SomerenDAL/SomerenDAL.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ActivityDao.cs" />
     <Compile Include="BaseDao.cs" />
+    <Compile Include="CalendarDao.cs" />
     <Compile Include="DrinkDao.cs" />
     <Compile Include="SupervisorDao.cs" />
     <Compile Include="SupplyDao.cs" />
