--- a/SomerenLogic/SomerenLogic.csproj
+++ b/SomerenLogic/SomerenLogic.csproj
@@ -53,6 +53,7 @@
     <Compile Include="TeacherService.cs" />
     <Compile Include="StudentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
     <Compile Include="VATCalculationService.cs" />
   </ItemGroup>
   <ItemGroup>
