--- a/SomerenModel/SomerenModel.csproj
+++ b/SomerenModel/SomerenModel.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Room.cs" />
     <Compile Include="Teacher.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="VATCalculation.cs" />
   </ItemGroup>
   <ItemGroup>
