Forgot password is aangemaakt en returned een gehashed password naar de db

--- a/SomerenDAL/SomerenDAL.csproj
+++ b/SomerenDAL/SomerenDAL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ActivityDao.cs" />
     <Compile Include="BaseDao.cs" />
     <Compile Include="CalendarDao.cs" />
+    <Compile Include="NewPasswordDao.cs" />
     <Compile Include="DrinkDao.cs" />
     <Compile Include="LoginDao.cs" />
     <Compile Include="SupervisorDao.cs" />
