--- a/SomerenLogic/SomerenLogic.csproj
+++ b/SomerenLogic/SomerenLogic.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ActivityService.cs" />
     <Compile Include="CalendarService.cs" />
+    <Compile Include="NewPasswordService.cs" />
     <Compile Include="DrinkService.cs" />
     <Compile Include="LoginService.cs" />
     <Compile Include="SupervisorService.cs" />
